bdr.BDR.scala.error
Erreur de compilation :
BDR:11: error: ';' expected but 'else' found.
    else if (a == "L")
    ^BDR:13: error: ';' expected but 'else' found.
    else if (a == "I")
    ^BDR:15: error: ';' expected but 'else' found.
    else if (a == "A")
    ^BDR:17: error: ';' expected but 'else' found.
    else if (a == "B")
    ^BDR:19: error: ';' expected but 'else' found.
    else if (a == "C")
    ^BDR:21: error: ';' expected but 'else' found.
    else if (a == "Z")
    ^BDR:23: error: ';' expected but 'else' found.
    else if (a == "Y")
    ^BDR:25: error: ';' expected but 'else' found.
    else if (a == "X")
    ^BDR:27: error: ';' expected but 'else' found.
    else
    ^